--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="stiles.css">
 </head>
 <body>
    
@@ -14,7 +15,33 @@
     <!-- <script src="ejercicio3.js"></script> -->
    <!--  <script src="ejercicio4.js"></script> -->
   <!--  <script src="ejercicio5.js"></script> -->
-   <script src="ejercicio6.js"></script>
+   <!-- <script src="ejercicio6.js"></script> -->
+   <!-- <script src="ejercicio7.js"></script>-->
+<!--    <script src="ejercicio8j.js"></script> -->
+<script src="ejercicio24.js"></script>
+
+<div class="card">
+    <div class="card-info">
+
+   
+    <h2>Ejercicio 24!</h2>
+
+    <p>Este ejercicio es para entrar en un mundo magico donde los círculos tienen secretos. </p>
+
+   <!--  Escribir un programa de JavaScript que a través de un formulario calcule el radio de un circulo y lo muestre en el HTML. -->
+
+
+
+   <form id="circuloForm">
+    <label for="radio">A ver dame el radio ponelo aca -></label>
+    <input type="number" id="radio" name="radio" required>
+    <button class="bn" type="button" onclick="hacerRadioSi()">Calcular</button>
+</form>
+<p>El área del círculo es: <span id="resultado"></span></p>
+
+</div>
+</div>
+
 
 </body>
 </html>
